simplify benchmark